# agent-god-action-simulator

./: .gitignore  AGENTS.md  DEV_PLAN.md  PROJECT_DESIGN.md  README.md  config.yaml  main.py  pyproject.toml  recipes.json
agent_world/: __init__.py  config.py  main.py
agent_world/abilities/: __init__.py  base.py
agent_world/ai/: memory.py  prompt_builder.py
agent_world/core/: component_manager.py  entity_manager.py  events.py  systems_manager.py  time_manager.py  world.py
agent_world/data/: recipes.json  roles.yaml
agent_world/gui/: input.py  renderer.py  window.py
agent_world/persistence/: __init__.py  event_log.py  incremental_save.py  replay.py  save_load.py  serializer.py
agent_world/scenarios/: base_scenario.py  (+1 more)
tests/: conftest.py  test_abilities.py  test_actions.py  test_ai_determinism.py  test_ai_llm.py  test_ai_memory.py  test_angel_generator.py  test_asset_generation.py  test_builtin_melee.py  test_cli.py  test_components.py  test_core.py  test_dynamic_abilities_integration.py  test_entity_manager.py  test_fps_command.py  test_gui_command.py  test_gui_input.py  test_gui_renderer.py  test_persistence_event_log.py  test_persistence_incremental_save.py  test_replay.py  test_spatial_index.py  test_systems_ability.py  test_systems_action_execution.py  test_systems_ai.py  test_systems_combat.py  test_systems_interaction.py  test_systems_manager.py  test_systems_movement.py  test_systems_perception.py  test_systems_physics.py  test_terminal_view.py  test_time_manager.py  test_utils_observer.py  test_utils_profiling.py  test_utils_sandbox.py
(+142 files in other folders)
