[project]
name = "agent-god-action-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

# Runtime dependencies
dependencies = [
    "python-dotenv",
    "PyYAML>=6.0",
    "aiohttp>=3.9",
    "httpx>=0.26",
    "RestrictedPython>=6.2",
    "Pillow>=10.2",
    "openrouter-selector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]
