[project]
name = "agent-god-action-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "httpx>=0.28.1",
    "openrouter-selector>=0.0.3",
    "pillow>=11.2.1",
    "pygame>=2.6.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "restrictedpython>=8.0",
]
